<resources>
    <string name="app_name">SearchParkingLot</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Login  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="email_not_valid">Please enter valid Email address</string>
    <string name="password_empty">Please enter password</string>
    <string name="email_password_wrong">Email / password is wrong</string>

    <!--  Parking Lot  -->
    <string name="time_zone">Time Zone</string>
    <string name="parking_lot_info">Taipei City\nParking Lot Info.</string>
    <string name="parking_lot_id">ID: %s</string>
    <string name="parking_lot_name">Name: %s</string>
    <string name="parking_lot_address">Address: %s</string>
    <string name="parking_lot_total_car">Total Car: %s</string>
    <string name="parking_lot_available_car">Available Car: %s</string>
    <string name="charge_station_info">---------- Charge Station Info ----------</string>
    <string name="charge_station_status_charging">Charging: %s</string>
    <string name="charge_station_status_standby">Standby: %s</string>

    <!--  User Update  -->
    <string name="user_update_email">Email: %s</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string-array name="time_zone_choice">
        <item>@string/item_1</item>
        <item>@string/item_2</item>
    </string-array>

    <string name="internet_not_connected">Internet is not connected</string>
    <string name="operation_failed">The operation failed, please try again or check your internet</string>

</resources>